Chore: Add footer element containing github icon link

--- a/static/index.html
+++ b/static/index.html
@@ -55,6 +55,16 @@
       <div class="lower"></div>
     </div>
 
+    <footer>
+      <a
+        href="http://github.com/johneliud"
+        target="_blank"
+        rel="noopener noreferrer"
+      >
+        <ion-icon name="logo-github"></ion-icon>
+      </a>
+    </footer>
+
     <script src="script.js"></script>
 
     <!-- Ion-icons link-->
